# simcse-embedding-api

./: Dockerfile  README.md  docker-build.sh  docker-push.sh  pyproject.toml  server.py
