[project]
name = "simcse-embedding-api"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "coji", email = "coji@techtalk.jp" }
]
dependencies = [
    "sentence-transformers>=2.2.2",
    "numpy>=1.24.4",
    "fugashi[unidic-lite]>=1.2.1",
    "fastapi>=0.101.1",
    "pydantic>=2.2.1",
    "uvicorn[standard]>=0.23.2",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "black>=23.7.0",
]

[tool.rye.scripts]
start = { cmd = 'uvicorn server:app --host 0.0.0.0 --port 8000', env = { ENV = 'development' } }
"docker:build" = { chain = ["docker:build:image", "docker:build:tag"] }
"docker:build:image" = { cmd = 'docker build -t simcse-embedding-api .' }
"docker:build:tag" = { cmd = 'docker tag simcse-embedding-api coji/simcse-embedding-api:latest' }
"docker:push" = { cmd = 'docker push coji/simcse-embedding-api:latest' }

[tool.hatch.metadata]
allow-direct-references = true
